WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263433
Stop failing muted audio capture when AirPods are taken out of ears
https://bugs.webkit.org/show_bug.cgi?id=263433
Summary
Stop failing muted audio capture when AirPods are taken out of ears
youenn fablet
Reported
2023-10-20 01:56:47 PDT
Stop failing muted audio capture when AirPods are taken out of ears
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-20 01:57:18 PDT
<
rdar://problem/117252822
>
youenn fablet
Comment 2
2023-10-20 02:30:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19334
EWS
Comment 3
2023-10-26 05:38:12 PDT
Committed
269807@main
(5a41af799e85): <
https://commits.webkit.org/269807@main
> Reviewed commits have been landed. Closing PR #19334 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug