Stop failing muted audio capture when AirPods are taken out of ears https://bugs.webkit.org/show_bug.cgi?id=263433 rdar://117252822

Reviewed by Eric Carlson.

When taking AirPods out of ears, the AirPod devices are disappearing and we were failing capture right away.
Given we are muting capture in that case, it is best to wait to fail capture when unmuted instead.

This allows to put AirPods in and out without having the website dealing with restarting capture.
We modify LayoutTests/fast/mediastream/microphone-change-while-muted.html accordingly and mock capture to validate device is available when starting capturing, like done by CoreAudio.

The test is only enabled in MacOS since other ports do not have a way to handle mock capture failure in case of missing device.

* LayoutTests/TestExpectations:
* LayoutTests/fast/mediastream/microphone-change-while-muted-expected.txt:
* LayoutTests/fast/mediastream/microphone-change-while-muted.html:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::devicesChanged):
* Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockAudioSharedInternalUnit::set):

Canonical link: https://commits.webkit.org/269807@main